[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-abuseipdb"
version = "0.1.0"
description = "MCP server for AbuseIPDB threat intelligence lookups"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "MCP AbuseIPDB Team" }
]
keywords = ["mcp", "abuseipdb", "threat-intelligence", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
mcp-abuseipdb = "mcp_abuseipdb.server:main"


[tool.coverage.run]
source = ["src/mcp_abuseipdb"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"
